--- a/index.html
+++ b/index.html
@@ -40,6 +40,86 @@
         </div>
 
     </nav>
+    <div id="reservemodal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a table </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+
+                    <form id="reserve">
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-3">Number of Guests</label>
+                            <div class="col-12 col-sm-9">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="ratingRadio" id="rating1"
+                                        value="1">
+                                    <label class="form-check-label" for="rating1">1</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="ratingRadio" id="rating2"
+                                        value="2">
+                                    <label class="form-check-label" for="rating2">2</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="ratingRadio" id="rating3"
+                                        value="3">
+                                    <label class="form-check-label" for="rating3">3</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="ratingRadio" id="rating4"
+                                        value="4">
+                                    <label class="form-check-label" for="rating4">4</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="ratingRadio" id="rating5"
+                                        value="5">
+                                    <label class="form-check-label" for="rating5">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="ratingRadio" id="rating6"
+                                        value="6">
+                                    <label class="form-check-label" for="rating6">6</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-3">Section</label>
+                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                    <input type="radio" name="sectionradio" id="nonsmoking" checked>Non-smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                    <input type="radio" name="sectionradio" id="smoking">Smoking
+                                </label>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-3">Date and Time</label>
+                            <input class="form-control-sm mr-3 col-10 col-sm-3" type="text" name="date" id="date"
+                                placeholder="Date">
+                            <input class="form-control-sm col-10 col-sm-3" type="text" name="time" id="time"
+                                placeholder="TIme">
+                        </div>
+
+                        <div class="form-group row">
+                            <button type="submit" class="btn btn-primary col-4 offset-1">Reserve</button>
+                            <button type="button" class="btn btn-secondary btn-sm ml-2 col-4 offset-1"
+                                data-dismiss="modal">Cancel</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
             <!-- Modal content-->
@@ -91,9 +171,8 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a class="btn btn-block nav-link btn-warning" href="/index.html#reserve" data-toggle="tooltip"
-                        data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>"
-                        data-placement="bottom">Reserve a table</a>
+                    <a class="btn btn-block nav-link btn-warning" data-target="#reservemodal"
+                        data-toggle="modal">Reserve a table</a>
                 </div>
             </div>
         </div>
@@ -220,57 +299,74 @@
                     <div class="card-title bg-warning">
                         <h3 class="card-header text-white">Reserve a table</h3>
                     </div>
-                    <form id="reserve">
-                        <div class="form-group row">
-                            <label class="col-12 col-sm-3">Number of Guests</label>
-                            <div class="col-12 col-sm-9">
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="ratingRadio" id="rating1"
-                                        value="1">
-                                    <label class="form-check-label" for="rating1">1</label>
-                                </div>
+                    <div class="card-body">
+                        <form id="reserve">
+                            <div class="form-group row">
+                                <label class="col-12 col-sm-3">Number of Guests</label>
+                                <div class="col-12 col-sm-9">
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="ratingRadio" id="rating1"
+                                            value="1">
+                                        <label class="form-check-label" for="rating1">1</label>
+                                    </div>
 
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="ratingRadio" id="rating2"
-                                        value="2">
-                                    <label class="form-check-label" for="rating2">2</label>
-                                </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="ratingRadio" id="rating2"
+                                            value="2">
+                                        <label class="form-check-label" for="rating2">2</label>
+                                    </div>
 
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="ratingRadio" id="rating3"
-                                        value="3">
-                                    <label class="form-check-label" for="rating3">3</label>
-                                </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="ratingRadio" id="rating3"
+                                            value="3">
+                                        <label class="form-check-label" for="rating3">3</label>
+                                    </div>
 
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="ratingRadio" id="rating4"
-                                        value="4">
-                                    <label class="form-check-label" for="rating4">4</label>
-                                </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="ratingRadio" id="rating4"
+                                            value="4">
+                                        <label class="form-check-label" for="rating4">4</label>
+                                    </div>
 
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="ratingRadio" id="rating5"
-                                        value="5">
-                                    <label class="form-check-label" for="rating5">5</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="ratingRadio" id="rating6"
-                                        value="6">
-                                    <label class="form-check-label" for="rating6">6</label>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="ratingRadio" id="rating5"
+                                            value="5">
+                                        <label class="form-check-label" for="rating5">5</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="ratingRadio" id="rating6"
+                                            value="6">
+                                        <label class="form-check-label" for="rating6">6</label>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="form-group row">
-                            <label class="col-12 col-sm-3">Date and Time</label>
-                            <input class="mr-3 col-12 col-sm-3" type="text" name="date" id="date" placeholder="Date">
-                            <input class="col-12 col-sm-3" type="text" name="time" id="time" placeholder="TIme">
-                        </div>
+                            <div class="form-group row">
+                                <label class="col-12 col-sm-3">Section</label>
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                        <input type="radio" name="sectionradio" id="nonsmoking" checked>Non-smoking
+                                    </label>
+                                    <label class="btn btn-danger">
+                                        <input type="radio" name="sectionradio" id="smoking">Smoking
+                                    </label>
+                                </div>
+                            </div>
 
-                        <div class="form-group row">
-                            <button type="submit" class="btn btn-primary  col-3 offset-3">Reserve</button>
-                        </div>
-                    </form>
+                            <div class="form-group row">
+                                <label class="col-12 col-sm-3">Date and Time</label>
+                                <input class="form-control-sm mr-3 col-10 col-sm-3" type="text" name="date" id="date"
+                                    placeholder="Date">
+                                <input class="form-control-sm col-10 col-sm-3" type="text" name="time" id="time"
+                                    placeholder="TIme">
+                            </div>
+
+                            <div class="form-group row">
+                                <button type="submit" class="btn btn-primary  col-6 offset-3">Reserve</button>
+                            </div>
+                        </form>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -326,11 +422,8 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        });
-    </script>
+
+
 </body>
 
 </html>
