--- a/index.html
+++ b/index.html
@@ -231,6 +231,11 @@
                     <a role="button" class="carousel-control-next" data-slide="next" href="#mycarousel">
                         <span class="carousel-control-next-icon "></span>
                     </a>
+
+                    <div class="btn-group" id="carousel-btn">
+                        <button class="btn-sm btn btn-danger" id="carousel-pause"><span class="fa fa-pause"></span></button>
+                        <button class="btn-sm btn btn-danger" id="carousel-play"><span class="fa fa-play"></span></button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -422,7 +427,16 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <script>$(document).ready(function(){
+        $("#mycarousel").carousel({interval: 2000});
+        $("#carousel-pause").click(function(){
+            $("#mycarousel").carousel('pause')
+        });
+        $("#carousel-play").click(function(){
+            $("#mycarousel").carousel('cycle')
+        });
+    })
+    </script> 
 
 </body>
 
