--- a/index.html
+++ b/index.html
@@ -232,10 +232,9 @@
                         <span class="carousel-control-next-icon "></span>
                     </a>
 
-                    <div class="btn-group" id="carousel-btn">
-                        <button class="btn-sm btn btn-danger" id="carousel-pause"><span class="fa fa-pause"></span></button>
-                        <button class="btn-sm btn btn-danger" id="carousel-play"><span class="fa fa-play"></span></button>
-                    </div>
+                    
+                    <button class="btn-sm btn btn-danger" id="carousel-btn"><span class="fa fa-pause"></span></button>
+                        
                 </div>
             </div>
         </div>
@@ -429,12 +428,20 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>$(document).ready(function(){
         $("#mycarousel").carousel({interval: 2000});
-        $("#carousel-pause").click(function(){
-            $("#mycarousel").carousel('pause')
-        });
-        $("#carousel-play").click(function(){
-            $("#mycarousel").carousel('cycle')
-        });
+        $("#carousel-btn").click(function(){
+            if($("#carousel-btn").children("span").hasClass("fa-pause")){
+                $("#mycarousel").carousel("pause");
+                $("#carousel-btn").children("span").removeClass("fa-pause");
+                $("#carousel-btn").children("span").addClass("fa-play");
+            }
+
+            else if ($("#carousel-btn").children("span").hasClass("fa-play")){
+                $("#mycarousel").carousel("cycle");
+                $("#carousel-btn").children("span").removeClass("fa-play");
+                $("#carousel-btn").children("span").addClass("fa-pause");
+            }
+        })
+
     })
     </script> 
 
