--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                                 class="fa fa-address-card fa-lg"></span>Contact</a></li>
                 </ul>
                 <div class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal" class="btn"><span class="fa fa-sign-in"></span>Log in</a>
+                    <a class="btn" id="login-btn"><span class="fa fa-sign-in"></span>Log in</a>
                 </div>
             </div>
         </div>
 
     </nav>
-    <div id="reservemodal" class="modal fade" role="dialog">
+    <div id="reserveModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
             <div class="modal-content">
                 <div class="modal-header">
@@ -60,7 +60,7 @@
                                 </div>
 
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="ratingRadio" id="rating2"
+                                    <input class="form-check-input" type="radio" checked name="ratingRadio" id="rating2"
                                         value="2">
                                     <label class="form-check-label" for="rating2">2</label>
                                 </div>
@@ -171,8 +171,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a class="btn btn-block nav-link btn-warning" data-target="#reservemodal"
-                        data-toggle="modal">Reserve a table</a>
+                    <a class="btn btn-block nav-link btn-warning" id="reserve-btn">Reserve a table</a>
                 </div>
             </div>
         </div>
@@ -444,6 +443,22 @@
 
     })
     </script> 
+
+    <script>
+        $("#login-btn").click(function(){
+            $("#loginModal").modal({
+                show: true
+            })
+        })
+    </script>
+
+    <script>
+        $("#reserve-btn").click(function(){
+            $("#reserveModal").modal({
+                show: true
+            })
+        })
+    </script>
 
 </body>
 
