onchange and parallel to watch and run NPM scripts in parallel

--- a/index.html
+++ b/index.html
@@ -425,40 +425,14 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>$(document).ready(function(){
-        $("#mycarousel").carousel({interval: 2000});
-        $("#carousel-btn").click(function(){
-            if($("#carousel-btn").children("span").hasClass("fa-pause")){
-                $("#mycarousel").carousel("pause");
-                $("#carousel-btn").children("span").removeClass("fa-pause");
-                $("#carousel-btn").children("span").addClass("fa-play");
-            }
-
-            else if ($("#carousel-btn").children("span").hasClass("fa-play")){
-                $("#mycarousel").carousel("cycle");
-                $("#carousel-btn").children("span").removeClass("fa-play");
-                $("#carousel-btn").children("span").addClass("fa-pause");
-            }
-        })
-
-    })
+    <script>
     </script> 
 
-    <script>
-        $("#login-btn").click(function(){
-            $("#loginModal").modal({
-                show: true
-            })
-        })
+    <script src="js/scripts.js">
+        
     </script>
 
-    <script>
-        $("#reserve-btn").click(function(){
-            $("#reserveModal").modal({
-                show: true
-            })
-        })
-    </script>
+   
 
 </body>
 
